# hw_3

./: .gitignore  functions.py  metrics.py  pyproject.toml  test.py  utils.py
data/: just_for_test.json
